@@ -4,10 +4,10 @@ bin_PROGRAMS =	ezstream
 
 ezstream_SOURCES = compat.c configfile.c ezstream.c metadata.c playlist.c \
 		util.c
-ezstream_LDADD = @LIBOBJS@ @XIPH_LIBS@
+ezstream_LDADD = @LIBOBJS@ @XIPH_LIBS@ @TAGLIB_LIBS@
     
-AM_CFLAGS =	@XIPH_CFLAGS@
-AM_CPPFLAGS =	@XIPH_CPPFLAGS@
+AM_CFLAGS =	@XIPH_CFLAGS@ @TAGLIB_CFLAGS@
+AM_CPPFLAGS =	@XIPH_CPPFLAGS@ @TAGLIB_CPPFLAGS@
 
 EXTRA_DIST =	compat.h configfile.h getopt.h metadata.h playlist.h \
 		strfctns.h util.h
