@@ -8,6 +8,10 @@ Changes in 0.4.0, (SVN trunk):
    - [ADD]   Implement a basename() function for Windows that behaves like the
              ones used on Windows.
 
+ * various:
+   - [ADD]   Allow ezstream to use TagLib for reading metadata from media
+             files. TagLib (libtag_c) is now an optional dependency.
+
 
 
 Changes in 0.3.0, released on 2007-03-05:
